# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

component("events_ipc") {
  output_name = "events_ipc"
  sources = [
    "latency_info_param_traits.cc",
    "latency_info_param_traits.h",
  ]

  defines = [ "EVENTS_IPC_IMPLEMENTATION" ]

  deps = [
    "//base",
    "//ipc",
    "//ui/events:events_base",
  ]
}
