# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("x") {
  sources = [
    "events_x_export.h",
    "events_x_utils.cc",
    "events_x_utils.h",
  ]
  defines = [ "EVENTS_X_IMPLEMENTATION" ]
  deps = [
    "//base",
    "//skia",
    "//ui/events:events_base",
    "//ui/events/devices",
    "//ui/gfx/x",
  ]
  configs += [ "//build/config/linux:x11" ]
}
