# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("blink") {
  sources = [
    "web_gesture_curve_impl.cc",
    "web_gesture_curve_impl.h",
  ]

  deps = [
    "//base",
    "//third_party/WebKit/public:blink_headers",
    "//ui/events",
    "//ui/events:gesture_detection",
    "//ui/gfx/geometry",
  ]
}
